--- a/Calculator_Js/Css/style.css
+++ b/Calculator_Js/Css/style.css
@@ -11,8 +11,8 @@
     height: 100vh;
     background: #6f7176;
     /*below lines are code to add this container to center*/
-    display: flex;
-    align-items: center;
+    display: flex;/*makes all content to represent in horizontal row*/
+    align-items: center;/*align data to view form center*/
     justify-content: center;
     background-color: rgb(248, 176, 82);
 }
